# valorant-tracker

./: .gitignore  AGENTS.md  LICENSE  README.md  fetch_reaver.cjs  package.json  pnpm-lock.yaml
raw/: contact.json
scripts/: build_release.ps1  generate_latest_json.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  constants.rs  discord.rs  lib.rs  logger.rs  main.rs  presets.rs  process.rs  single_instance.rs  state.rs
src-tauri/src/api/: client.rs  types.rs
src/components/: AgentOverlay.tsx  CachedImage.tsx  CrosshairOverlay.tsx  ErrorBoundary.tsx  Footer.tsx  Header.tsx  IngameState.tsx  MiniCrosshair.tsx  PlayerCard.tsx  PlayerPanel.tsx  PlayerStatsPanel.tsx  PregameState.tsx  PresetsTab.tsx  SettingsPanel.tsx  ShopPanel.tsx  SidePanel.tsx  StatusIndicator.tsx  WaitingState.tsx  WeaponOverlay.tsx
src/components/Chat/: ChatPanel.tsx
src/components/common/: CachedImage.tsx  GlitchOverlay.tsx
src/hooks/: useGameLoop.ts
src/lib/: constants.ts  i18n.ts  maps.ts  playerStats.types.ts  types.ts
src/stores/: assetsStore.ts  chatStore.ts  constantsStore.ts  gameStore.ts  licenseStore.ts  panelStore.ts  playerStatsStore.ts  presetsStore.ts  settingsStore.ts  updateStore.ts
src/utils/: consoleOverride.ts  crosshair.ts  ipc.ts  playerSettings.ts
