[package]
name = "valorant-tracker"
version = "1.6.6"
description = "Valorant Match Tracker"
authors = ["omerg"]
edition = "2021"

[lib]
name = "valorant_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# Standard client for Local Riot API (native-tls for Windows)
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate"] }
# Impersonation client for Tracker.gg (v4 to match rquest-util)
rquest = { version = "4", features = ["json", "cookies", "gzip", "brotli", "deflate"] }
rquest-util = "2"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.22"
thiserror = "2"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
once_cell = "1.19"
tauri-plugin-shell = "2.3.3"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2"
urlencoding = "2.1"

# Windows registry and utilities
winreg = "0.55"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

# Single-instance mechanism (Windows only)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }
